--- a/force-app/main/default/lwc/verificationUser/verificationUser.html
+++ b/force-app/main/default/lwc/verificationUser/verificationUser.html
@@ -10,7 +10,7 @@
         </div>
     </div>
     <div class="slds-var-p-around_x-small">
-        <lightning-textarea label="Comments" onchange={commentHandler}></lightning-textarea>
+        <lightning-textarea label="Reason for Verification" onchange={commentHandler}></lightning-textarea>
     </div>
     <div class="slds-var-m-top_small slds-float_right">
         <lightning-button label="Verify" onclick={handleVerifyClick} variant="brand"></lightning-button>
